--- a/src/App.css
+++ b/src/App.css
@@ -4,25 +4,36 @@
   box-sizing: border-box;
 }
 
+body{
+  background-color: #505050;
+}
+
 .main-container {
   display: flex;
 }
 main {
-  padding: 10px;
+  padding: 3vh 5vw;
+  width: 100%;
+  
 }
 
 .title {
   font-size: 3rem;
   display: grid;
   place-items: center;
+  background-color: #2B2A28;
+  width: 100%;
+  height: 30vh;
+  margin-bottom: 60px;
 }
 
 /* Sidebar */
 .sidebar {
-  background: rgb(0, 7, 61);
+  background: rgb(0, 0, 1);
   color: white;
   height: 100vh;
   overflow-y: auto;
+  
 }
 
 .top_section {
@@ -106,4 +117,67 @@ main {
 .menu_container .link {
   padding-left: 20px;
   border-bottom: #fff 0.5px solid;
+}
+
+.dashboard-menu{
+  display: flex; 
+  justify-content:center;
+  flex-direction: row;
+  border: black solid 1px;
+  width: 100%;
+  height: 55vh;
+  gap:3vw;
+  padding: 3vw;
+
+}
+
+.menu-item{
+  width: 20vw;
+  min-width: 130px;
+  height: 100%;
+  border: black solid 2px;
+}
+
+.thumb-menu{
+  display: flex; 
+  justify-content:center;
+  flex-direction: row;
+  border: black solid 1px;
+  width: 100%;
+  height: 55vh;
+  gap:2vw;
+  padding: 3vw;
+  flex-wrap: wrap;
+}
+
+.thumb-item{
+  width: 30%;
+  height: 50%;
+  min-width: 130px;
+  border: black solid 2px;
+}
+
+@media (max-width: 768px){
+  .bars {
+    display: none;
+  }
+}
+
+@media (max-width: 600px){
+  .sidebar{
+  display: none;
+  }
+  .dashboard-menu{
+    flex-direction: column;
+    align-items: center;
+  }
+  .menu-item{
+    height: 100%;
+    min-width: 200px;
+  }
+}
+@media (max-width: 490px){
+  .thumb-item{
+    height: 100px;
+  }
 }
