--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,15 @@
 
 body{
   background-color: #505050;
+  background-image: url("./images/background/Integrated-Circuits-PNG-Picture.png");
+  
 }
 
 .main-container {
   display: flex;
+
 }
+
 main {
   padding: 3vh 5vw;
   width: 100%;
@@ -18,13 +22,40 @@ main {
 }
 
 .title {
-  font-size: 3rem;
   display: grid;
-  place-items: center;
+  grid-template-columns: 1fr 2fr;
+  place-items:initial;
   background-color: #2B2A28;
-  width: 100%;
+  width: 90%;
   height: 30vh;
-  margin-bottom: 60px;
+  margin: 30px auto;
+  border-radius: 30px;
+  padding: 30px;
+  color:#fff;
+}
+
+.title h1{
+  margin-bottom: 20px;
+}
+
+.title h4{
+  margin-right: 1vw;
+}
+
+.title img{
+  width: 140px;
+  margin-top: 20px;
+  margin-left: 20px;
+  
+}
+
+.title-img-background {
+  background-color: #DAB804;
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
+  margin-top: -20px;
+  justify-self: center;
 }
 
 /* Sidebar */
@@ -142,7 +173,6 @@ main {
   display: flex; 
   justify-content:center;
   flex-direction: row;
-  border: black solid 1px;
   width: 100%;
   height: 55vh;
   gap:2vw;
@@ -153,8 +183,19 @@ main {
 .thumb-item{
   width: 30%;
   height: 50%;
+  max-width: 300px;
   min-width: 130px;
-  border: black solid 2px;
+  border-radius: 30px;
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.539);
+  background-color: #DAB804;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.thumb-item-image img{
+  width: 120px
 }
 
 @media (max-width: 768px){
@@ -166,6 +207,7 @@ main {
 @media (max-width: 600px){
   .sidebar{
   display: none;
+  
   }
   .dashboard-menu{
     flex-direction: column;
@@ -174,6 +216,16 @@ main {
   .menu-item{
     height: 100%;
     min-width: 200px;
+  }
+  .thumb-item-image img{
+    width: 80px
+  }
+  .title{
+    place-items: center;
+    grid-template-columns: 1fr;
+  }
+  .description{
+    display: none;
   }
 }
 @media (max-width: 490px){
