--- a/src/App.css
+++ b/src/App.css
@@ -6,26 +6,45 @@
 
 body{
   background-color: #505050;
-  background-image: url("./images/background/Integrated-Circuits-PNG-Picture.png");
-  
+  background-image: url("./images/background/program.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  overflow-y: hidden;
+}
+
+/* ----------container Side --------------- */
+main {
+  width: 100%;
+  padding: 20px;
+  position: relative;
 }
 
 .main-container {
   display: flex;
-
 }
 
-main {
-  padding: 3vh 5vw;
-  width: 100%;
-  
-}
+
+
+
+/* ---------- dashboard --------------- */
+.main-side{
+  width: 85%;
+  height: 98%;
+  /* From https://css.glass */
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6.4px);
+  -webkit-backdrop-filter: blur(6.4px);
+  border: 1px solid rgba(255, 255, 255, 0.38);
+  margin: auto;
+  }
 
 .title {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  place-items:initial;
-  background-color: #2B2A28;
+  place-items: center;
   width: 90%;
   height: 30vh;
   margin: 30px auto;
@@ -34,37 +53,37 @@ main {
   color:#fff;
 }
 
-.title h1{
-  margin-bottom: 20px;
+.dasboard-title h1{
+  font-size: clamp(2.0rem, 4vw, 10.0rem);
+  text-align: center;
 }
 
-.title h4{
-  margin-right: 1vw;
+
+
+.dashboard-menu{
+  display: flex; 
+  justify-content:center;
+  flex-direction: row;
+  width: 100%;
+  height: 55vh;
+  gap:3vw;
+  padding: 3vw;
+  flex-wrap: wrap;
 }
 
-.title img{
-  width: 140px;
-  margin-top: 20px;
-  margin-left: 20px;
+.item-icon{
+  margin-top: 3%;
+  font-size: clamp(2rem, 4vw, 8.5rem);
   
 }
 
-.title-img-background {
-  background-color: #DAB804;
-  width: 180px;
-  height: 180px;
-  border-radius: 50%;
-  margin-top: -20px;
-  justify-self: center;
-}
-
-/* Sidebar */
+/*--------- Sidebar ------------*/
 .sidebar {
   background: rgb(0, 0, 1);
   color: white;
   height: 100vh;
   overflow-y: auto;
-  
+  font-size: clamp(1.6rem, 2vw, 5.5rem);
 }
 
 .top_section {
@@ -73,13 +92,16 @@ main {
   justify-content: space-between;
   padding: 15px 10px;
 }
+
 .logo {
-  font-size: 18px;
+  font-size: clamp(1.2rem, 1vw, 4.5rem);
   line-height: 0;
 }
+
 .bars {
   width: 30px;
 }
+
 .hide {
   display: none;
 }
@@ -91,12 +113,12 @@ main {
   height: 30px;
   padding: 10px;
 }
+
 .search input {
   border: none;
   margin-left: 10px;
   border-radius: 5px;
   background: rgb(238, 238, 238);
-
   color: white;
 }
 
@@ -106,6 +128,7 @@ main {
   flex-direction: column;
   gap: 5px;
 }
+
 .link {
   display: flex;
   color: white;
@@ -114,89 +137,315 @@ main {
   border-right: 4px solid transparent;
   transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045);
 }
+
 .link:hover {
   border-right: 4px solid white;
   background: rgb(45, 51, 89);
   transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045);
 }
+
 .active {
   border-right: 4px solid white;
   background: rgb(45, 51, 89);
 }
+
 .link_text {
   white-space: nowrap;
-  font-size: 15px;
+  font-size: clamp(1.0rem, 1.5vw, 5.5rem);
 }
 
 .menu {
   display: flex;
   color: white;
-
   padding: 5px 10px;
   border-right: 4px solid transparent;
   transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045);
   justify-content: space-between;
 }
+
 .menu_item {
   display: flex;
   gap: 10px;
+  
 }
+
 .menu_container {
   display: flex;
   flex-direction: column;
 }
+
 .menu_container .link {
   padding-left: 20px;
   border-bottom: #fff 0.5px solid;
 }
 
-.dashboard-menu{
-  display: flex; 
-  justify-content:center;
-  flex-direction: row;
-  border: black solid 1px;
-  width: 100%;
-  height: 55vh;
-  gap:3vw;
-  padding: 3vw;
 
+/* ------------ other sections  --------------- */
+.first-container-menu{
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6.4px);
+  -webkit-backdrop-filter: blur(6.4px);
+  border: 1px solid rgba(255, 255, 255, 0.38);
+  width: 100%;
+  height: 98%;
+  padding-bottom: 10px;
+  position: relative;
+}
+
+.title h1{
+  margin-bottom: 20px;
+  font-size: clamp(2.0rem, 4vw, 10.0rem);
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.788);
+}
+
+.title h3{
+  font-size: clamp(1.0rem, 3vw, 8.5rem);
+  text-align: center;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.788);
+}
+
+.title h4{
+  margin-right: 1vw;
+  font-size: clamp(1.0rem, 1.5vw, 8.5rem);
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.788);
+}
+
+.title img{
+  width: 11vw;
+  min-width: 180px;
+}
+
+.title-img-background {
+  background-color: rgba(0, 0, 9, 0.274);
+  height: auto;
+  
+  border-radius: 50%;
+  margin-top: -20px;
+  justify-self: center;
 }
 
 .menu-item{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
   width: 20vw;
-  min-width: 130px;
-  height: 100%;
-  border: black solid 2px;
+  min-width: 200px;
+  height: auto;
+  flex-direction: column;
+  color: white;
+  
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.779);
+  background-color: rgba(0, 0, 9, 0.274);
+  font-size: clamp(1.0rem, 2vw, 5.5rem);
+  transition: background-color 0.2s ;
+  cursor: pointer;
 }
+
+.menu-item:hover{
+  background-color: rgba(0, 0, 0, 0.566);
+}
+
 
 .thumb-menu{
   display: flex; 
   justify-content:center;
   flex-direction: row;
   width: 100%;
-  height: 55vh;
+  height: 57vh;
   gap:2vw;
-  padding: 3vw;
+  padding: 1vw;
   flex-wrap: wrap;
 }
 
 .thumb-item{
-  width: 30%;
-  height: 50%;
-  max-width: 300px;
+  width: 22vw;
+  height: auto;
   min-width: 130px;
   border-radius: 30px;
-  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.539);
-  background-color: #DAB804;
+  color: white;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.779);
+  background-color: rgba(0, 0, 9, 0.274);
   align-items: center;
   justify-content: center;
   display: flex;
   flex-direction: column;
+  font-size: clamp(1.0rem, 1.6vw, 5.5rem);
+  transition: background-color 0.2s ;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  position: relative;
+  border: 1px solid rgba(255, 255, 255, 0.38);
+}
+.thumb-item:hover{
+  background-color: rgba(0, 0, 0, 0.566);
 }
 
-.thumb-item-image img{
-  width: 120px
+.thumb-proyect-1{
+  background-image: url("./images/works/campaing.png");
+
 }
+.thumb-proyect-2{
+  background-image: url("./images/works/landing.png");
+
+}
+.thumb-proyect-3{
+  background-image: url("./images/works/portfolio.png");
+
+}
+.thumb-proyect-4{
+  background-image: url("./images/works/game.png");
+}
+.thumb-proyect-5{
+  background-image: url("./images/works/cryptolanding.png");
+}
+.thumb-proyect-6{
+  background-image: url("./images/works/pilot.png");
+}
+
+.movil-home{
+  display: none;
+}
+
+.hover-text{
+  width: 101%;
+  height: 102%;
+  background-color: rgba(0, 0, 0, 0.763);
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity  0.2s;
+  font-weight: 600;
+  
+}
+
+.hover-text div{
+  margin-top: 2%;
+  color: white;
+  border-bottom: rgba(255, 255, 255, 0.637) 1px solid;
+  font-size: 1vw;
+}
+
+
+.hover-text:hover{
+  opacity: 1;
+}
+
+.thumb-item-footer{
+  font-size: clamp(0.6rem, 1vw, 5.5rem);
+}
+
+/* ---------modal ---------------- */
+
+.dark-background{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.646);
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-container{
+  width: 70%;
+  height: 80%;
+  background-color: rgb(198, 197, 197);
+  display: grid;
+  grid-template-rows: 1fr 3fr 1fr;
+  border-radius: 20px;
+  
+}
+
+
+
+.modal-header{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: clamp(1.0rem, 2vw, 5.5rem);
+}
+
+.modal-body{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 0.1vw 1vw;
+  flex-wrap: wrap;
+  height: 100%;
+}
+
+.proyect-img{
+  width: 20vw;
+  min-width: 200px;
+  border-radius: 30px;
+  border-radius: 20px;
+}
+
+.modal-body img{
+  border-radius: 20px;
+  width: 100%;
+}
+
+.modal-footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3vw;
+}
+
+.modal-footer button{
+  font-size: clamp(1.0rem, 1.5vw, 5.5rem);
+  padding: 10px 20px;
+  border-radius: 20px;
+  
+}
+
+.visitar{
+  background-color: rgb(18, 75, 200);
+  color: white;
+  cursor: pointer;
+  transition: background 0.2s ;
+  border: none;
+  
+}
+
+.visitar a{
+  text-decoration: none;
+  color: white;
+}
+
+.visitar:hover{
+  background-color: rgb(14, 52, 134);
+}
+
+.cerrar{
+  background-color: rgb(220, 16, 16);
+  color: white;
+  cursor: pointer;
+  transition: background 0.2s ;
+  border: none;
+}
+
+.cerrar:hover{
+  background-color: rgb(148, 14, 14);
+}
+
+
 
 @media (max-width: 768px){
   .bars {
@@ -207,29 +456,68 @@ main {
 @media (max-width: 600px){
   .sidebar{
   display: none;
-  
   }
+
+  .movil-home{
+    display: block;
+    position: absolute;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.788);
+    top: 10px;
+    left: 10px;
+    color: white;
+    font-size: clamp(1.0rem, 8vw, 10rem);
+    background-color: rgba(0, 0, 0, 0.365);
+    border-radius: 50%;
+    padding: 10px;
+    height: auto;
+    border: 1px rgba(255, 255, 255, 0.582) solid;
+    cursor: pointer;
+    transition: background-color 0.2s ;
+  }
+
+  .movil-home:hover{
+    background-color: rgba(0, 0, 0, 0.566);
+  }
+
+  .dasboard-title h1{
+    display: none;
+  }
+
+  .dasboard-title h3{
+    display: none;
+  }
+
   .dashboard-menu{
     flex-direction: column;
     align-items: center;
+    flex-wrap: nowrap;
   }
+
   .menu-item{
     height: 100%;
     min-width: 200px;
   }
+
   .thumb-item-image img{
     width: 80px
   }
+
   .title{
     place-items: center;
     grid-template-columns: 1fr;
   }
+
   .description{
     display: none;
   }
+
 }
 @media (max-width: 490px){
   .thumb-item{
     height: 100px;
+
+  }
+  .first-container-menu{
+    min-width: 300px;
   }
 }
