--- a/src/App.css
+++ b/src/App.css
@@ -289,7 +289,7 @@ main {
 
 }
 .thumb-proyect-2{
-  background-image: url("./images/works/landing.png");
+  background-image: url("./images/works/opco.jpg");
 
 }
 .thumb-proyect-3{
